--- a/app/src/main/res/layout/list_view_shoes.xml
+++ b/app/src/main/res/layout/list_view_shoes.xml
@@ -29,7 +29,7 @@
 
     <TextView
         android:id="@+id/tvProductName"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
