--- a/app/src/main/res/layout/signin_activity.xml
+++ b/app/src/main/res/layout/signin_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activity.SigninActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -19,7 +19,7 @@
         app:srcCompat="@drawable/theme" />
 
     <EditText
-        android:id="@+id/edt_search"
+        android:id="@+id/edtGmail"
         android:layout_width="347dp"
         android:layout_height="60dp"
         android:layout_marginTop="32dp"
@@ -32,10 +32,10 @@
         android:textColorHint="#9E9E9E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/ivAvatar" />
 
     <EditText
-        android:id="@+id/edt_search2"
+        android:id="@+id/edtPassword"
         android:layout_width="347dp"
         android:layout_height="60dp"
         android:layout_marginTop="32dp"
@@ -48,10 +48,10 @@
         android:textColorHint="#9E9E9E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_search" />
+        app:layout_constraintTop_toBottomOf="@+id/edtGmail" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/ivAvatar"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="80dp"
@@ -61,7 +61,7 @@
         app:srcCompat="@drawable/ic_vector_user" />
 
     <Button
-        android:id="@+id/btn_add"
+        android:id="@+id/btnSignin"
         android:layout_width="347dp"
         android:layout_height="70dp"
         android:layout_marginTop="32dp"
@@ -73,7 +73,7 @@
         app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_search2" />
+        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
 
     <TextView
         android:id="@+id/textView2"
@@ -85,10 +85,10 @@
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_add" />
+        app:layout_constraintTop_toBottomOf="@+id/btnSignin" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvSignup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -99,16 +99,5 @@
         app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="UPLOAD AVATAR"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
