login logout firebase ok - LeVanToan

--- a/app/src/main/res/layout/signin_activity.xml
+++ b/app/src/main/res/layout/signin_activity.xml
@@ -29,6 +29,7 @@
         android:hint="GMAIL"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
+        android:textColor="@color/white"
         android:textColorHint="#9E9E9E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +46,7 @@
         android:hint="PASSWORD"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
+        android:textColor="@color/white"
         android:textColorHint="#9E9E9E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
