--- a/app/src/main/res/layout/add_product_activity.xml
+++ b/app/src/main/res/layout/add_product_activity.xml
@@ -92,7 +92,7 @@
         android:id="@+id/edtProductName"
         android:layout_width="347dp"
         android:layout_height="60dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="144dp"
         android:background="@drawable/shape_search"
         android:backgroundTint="#161616"
         android:ems="10"
@@ -133,5 +133,27 @@
         app:layout_constraintEnd_toEndOf="@+id/btnSave"
         app:layout_constraintStart_toStartOf="@+id/btnSave"
         app:layout_constraintTop_toBottomOf="@+id/btnSave" />
+
+    <ImageView
+        android:id="@+id/imgProductAdd"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/edtProductName"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.484"
+        app:srcCompat="@drawable/rectangle" />
+
+    <Button
+        android:id="@+id/btn_choose"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Choose Image"
+        app:layout_constraintBottom_toBottomOf="@+id/imgProductAdd"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.205"
+        app:layout_constraintStart_toEndOf="@+id/imgProductAdd"
+        app:layout_constraintTop_toTopOf="@+id/imgProductAdd" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
