--- a/app/src/main/res/layout/add_product_activity.xml
+++ b/app/src/main/res/layout/add_product_activity.xml
@@ -67,6 +67,7 @@
         android:hint="Description"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
+        android:textColor="#FFFFFF"
         android:textColorHint="#9E9E9E"
         app:layout_constraintEnd_toEndOf="@+id/edtProductName"
         app:layout_constraintStart_toStartOf="@+id/edtProductName"
@@ -83,6 +84,7 @@
         android:hint="Price"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
+        android:textColor="#FFFFFF"
         android:textColorHint="#9E9E9E"
         app:layout_constraintEnd_toEndOf="@+id/edtDescription"
         app:layout_constraintStart_toStartOf="@+id/edtDescription"
@@ -99,6 +101,7 @@
         android:hint="Name"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
+        android:textColor="#FFFFFF"
         android:textColorHint="#9E9E9E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
